fixed nav socials overlap

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -253,7 +253,7 @@ nav {
 
 .nav_menu_socials > div {
     display: flex;
-    margin: 0 40px;
+    margin: 0 20px;
 }
 
 .menu_socials_text {
